--- a/spring-social-showcase-boot/src/main/resources/templates/connect/facebookConnect.html
+++ b/spring-social-showcase-boot/src/main/resources/templates/connect/facebookConnect.html
@@ -12,7 +12,7 @@
 			
 			<form th:action="@{/connect/facebook}" method="POST">
 				<input type="hidden" name="_csrf" th:value="${_csrf.token}" />
-				<input type="hidden" name="scope" value="read_stream,user_posts,user_photos" />
+				<input type="hidden" name="scope" value="public_profile,email,user_friends" />
 				<div class="formInfo">
 					<p>You aren't connected to Facebook yet. Click the button to connect Spring Social Showcase with your Facebook account.</p>
 				</div>
