--- a/spring-social-showcase-sec/src/main/resources/views/signin.html
+++ b/spring-social-showcase-sec/src/main/resources/views/signin.html
@@ -54,11 +54,11 @@
 		
 			<!-- FACEBOOK SIGNIN -->
 				<form th:action="@{/auth/facebook}" method="GET">
-				<input type="hidden" name="scope" value="read_stream,user_posts,user_photos" />
+				<input type="hidden" name="scope" value="public_profile,email,user_friends" />
 				<p><button type="submit"><img th:src="@{/resources/social/facebook/sign-in-with-facebook.png}"/></button></p>
 			</form>
 			
-			<hr/>
+			<hr/>me
 			
 			<p><a th:href="@{/auth/facebook?scope=read_stream}"><img th:src="@{/resources/social/facebook/sign-in-with-facebook.png}" border="0"/></a></p>
 		 
